@@ -5,10 +5,7 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.kwcapstone.AI.GptService;
 import com.kwcapstone.Config.RoomParticipantTracker;
 import com.kwcapstone.Config.WebSocketSessionRegistry;
-import com.kwcapstone.Domain.Dto.Request.ParticipantDto;
-import com.kwcapstone.Domain.Dto.Request.ParticipantEventDto;
-import com.kwcapstone.Domain.Dto.Request.ProjectNameRequestDto;
-import com.kwcapstone.Domain.Dto.Request.ScriptMessageRequestDto;
+import com.kwcapstone.Domain.Dto.Request.*;
 import com.kwcapstone.Domain.Dto.Response.*;
 import com.kwcapstone.Domain.Entity.Project;
 import com.kwcapstone.Repository.ProjectRepository;
@@ -142,18 +139,27 @@ public class WebSocketService {
                 // 전체 스크립트 줄 읽기
                 List<String> allLines = Files.readAllLines(Path.of(filePath));
                 String fullText = String.join(" ", allLines);
+
                 String keywordResponse = gptService.callRecommendedKeywords(fullText);
 
-                List<String> keywords = Arrays.stream(keywordResponse.split(","))
-                        .map(String::trim)
-                        .filter(s -> !s.isEmpty())
-                        .limit(5)
-                        .collect(Collectors.toList());
+                // GPT 응답이 에러 문자열인지 확인
+                if (keywordResponse.startsWith("Error:")) {
+                    throw new ResponseStatusException(HttpStatus.BAD_GATEWAY, "[추천 키워드] : 외부 GPT API 처리 중 오류");
+                }
+
+                // 응답 JSON 배열 → List<String> 파싱
+                List<String> keywords = parseJsonArrayToList(keywordResponse);
+
+                // 최대 5개까지만 전송
+                List<String> trimmed = keywords.stream().limit(5).toList();
 
                 messagingTemplate.convertAndSend(
                         "/topic/conference/" + projectId,
-                        new RecommendKeywordDto("recommended_keywords", projectId, keywords));
-                } catch (IOException e) {
+                        new RecommendKeywordDto("recommended_keywords", projectId, trimmed)
+                );
+
+            } catch (IOException e) {
+                e.printStackTrace();
                 messagingTemplate.convertAndSend(
                         "/topic/conference/" + projectId,
                         new RecommendKeywordDto("recommended_keywords", projectId, List.of("에러 발생"))
@@ -353,4 +359,23 @@ public class WebSocketService {
             System.out.println("파일 없음: " + filePath); // 디버깅용 로그
         }
     }
+
+    // 키워드 직접 추가
+//    public void addKeyword(String projectIdStr, MindmapAddRequestDto dto){
+//        if (dto.getEvent().equals("add_mindmap")) {
+//            try {
+//                ObjectId projectId = new ObjectId(projectIdStr);
+//                Project project = projectRepository.findByProjectId(projectId)
+//                        .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "프로젝트를 찾을 수 없습니다."));
+//
+////                String content = dto.getScription();
+//
+//                // 초기화
+//                scriptBuffer.put(projectIdStr, new ArrayList<>());
+//                newScriptionCounter.put(projectIdStr, 0);
+//            } catch (IOException e) {
+//                throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "스크립트 저장 중 오류가 발생하였습니다." + e);
+//            }
+//        }
+//    }
 }
